Actualizacion de Filtrado...h

--- a/gestion/templates/gestion/principal.html
+++ b/gestion/templates/gestion/principal.html
@@ -103,13 +103,13 @@
             </a>
         </div>
         <div class="service-box" style="--i:#540d6e">
-           <a href="{% url 'operadoras' %}">
+           <a href="{% url 'gastos' %}">
             <div class="icon">
-                <ion-icon name="earth-outline"></ion-icon>
-                <span>OPERADORAS</span>
+                <ion-icon name="cash-outline"></ion-icon>
+                <span>GASTOS</span>
             </div>
             <div class="content2">
-                <h2>Operadoras</h2>
+                <h2>Gastos</h2>
                 <p>
                     Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut
                     perspiciatis, unde esse obcaecati
@@ -120,7 +120,7 @@
         <div class="service-box" style="--i:#36B47F">
             <a  href="{% url 'proveedores' %}">
                 <div class="icon">
-                    <ion-icon name="paper-plane-outline"></ion-icon>
+                    <ion-icon name="earth-outline"></ion-icon>
                     <span>PROVEEDORES</span>
                 </div>
                 <div class="content2">
